--- a/generators/11ty-app/template/src/assets/css/globals.css
+++ b/generators/11ty-app/template/src/assets/css/globals.css
@@ -1,3 +1,9 @@
 body {
-  font-family: sans-serif;
+  font-family: Saira, sans-serif;
+  background-color: #121212;
+  color: #fff;
+}
+
+a {
+  color: #43b6b7;
 }
