feat: add snowpack app

--- a/generators/basic-app/template/index.html
+++ b/generators/basic-app/template/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FicusJS app</title>
+  <title>{{app_name}}</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
       render () {
         return html`
           <div>
-            <p>FicusJS hello world</p>
+            <h1>Hello world!</h1>
             <button type="button" onclick="${this.handleClick}">Click me</button>
           </div>
         `
