--- a/generators/vite-typescript-app/template/src/index.html
+++ b/generators/vite-typescript-app/template/src/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <hello-world></hello-world>
-    <script type="module" src="/index.js"></script>
+    <script type="module" src="/index.ts"></script>
   </body>
 </html>
